# vision_utils

./: .gitignore  grad_cam.py  main.py  plotting.py  pyproject.toml  requirements.txt  test.ipynb
.github/: PULL_REQUEST_TEMPLATE.md
configs/: config.yaml
logs/2025-05-12_03-33-49_SimpleCNN/: events.out.tfevents.1747020829.999aa0f1fabf.42818.0
logs/2025-05-12_03-35-22_SimpleCNN/: events.out.tfevents.1747020922.999aa0f1fabf.42872.0
logs/2025-05-12_03-36-55_SimpleCNN/: events.out.tfevents.1747021015.999aa0f1fabf.42906.0
logs/2025-05-12_03-44-43_SimpleCNN/: events.out.tfevents.1747021483.999aa0f1fabf.43132.0
logs/2025-05-12_03-56-48_SimpleCNN/: events.out.tfevents.1747022208.999aa0f1fabf.43252.0
logs/2025-05-12_03-57-25_SimpleCNN/: events.out.tfevents.1747022245.999aa0f1fabf.43292.0
logs/2025-05-12_04-01-00_SimpleCNN/: events.out.tfevents.1747022460.999aa0f1fabf.43354.0
logs/2025-05-12_04-11-09_SimpleCNN/: events.out.tfevents.1747023069.999aa0f1fabf.43523.0
logs/2025-05-12_04-12-03_SimpleCNN/: events.out.tfevents.1747023123.999aa0f1fabf.43550.0
logs/2025-05-12_04-16-42_SimpleCNN/: events.out.tfevents.1747023402.999aa0f1fabf.43599.0
logs/2025-05-12_04-18-36_SimpleCNN/: events.out.tfevents.1747023516.999aa0f1fabf.43633.0
models/: model_cnn.py  model_selector.py  resnet_finetune.py
scripts/: train.py
trainers/: multi_gpu_trainer.py  pre_trainer.py  train.py
utils/: data_utils.py  get_dataset.py  gradcam_utils.py  image_dataset_template.py  save_load.py
vision_utils/: __init__.py  configs.py  datasets.py  transforms.py
(+27 files in other folders)
